# duckdb-extensions-playground

./: .gitmodules  CMakeLists.txt  Makefile  README.md  first_extensions.cpp
.github/workflows/: main.yml
test/first_extensions/: tiny.test
